# centralized-logging-with-opensearch

./: .cfnnag_global_suppress_list  .flake8  .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  CUSTOM_BUILD.md  NOTICE.txt  README.md  SECURITY.md  buildspec.yml  index.html  mkdocs.yml  sonar-project.properties
source/constructs/lambda/api/alarm/: lambda_function.py  pyproject.toml
source/constructs/lambda/api/alarm/test/: conftest.py  requirements-test.txt  test_lambda_function.py
source/constructs/lambda/api/alarm/util/: alarm_helper.py
source/constructs/lambda/api/app_log_ingestion/: auto_scaling_group_config_lambda_function.py  ec2_as_source_lambda_function.py  ec2_ingestion_distribution_event_lambda_function.py  eks_cluster_pod_log_ingestion_lambda_function.py  eks_cluster_pod_log_pipeline_stfn_lambda_function.py  eks_daemonset_sidecar_config_lambda_function.py  ingestion_modification_event_lambda_function.py  lambda_function.py  pod_log_without_data_buffer_ingestion_lambda_function.py  pyproject.toml  requirements.txt  s3_as_source_lambda_function.py  syslog_as_source_lambda_function.py
source/constructs/lambda/api/app_log_ingestion/flb/: distribution.py  flb_builder.py  flb_model.py  k8s.py  kubectl_version.json
source/constructs/lambda/api/app_log_ingestion/member_account/: lambda_function.py
source/constructs/lambda/api/app_log_ingestion/svc/: ec2.py  ec2_attach_iam_instance_profile.py  k8s.py  s3.py  service.py  syslog.py
source/constructs/lambda/api/app_log_ingestion/test/: conftest.py  requirements-test.txt  test_agent_role_mgr.py  test_asg_config_lambda_function.py  test_assume_role.py  test_auto_scaling_group_config_lambda_function.py  test_aws_svc_mgr.py  test_ddb_connect.py  test_distribute_config_helper.py  test_ec2_as_source_lambda_function.py  test_ec2_attach_iam_instance_profile.py  test_ec2_ingestion_distribution_event_lambda_function.py  test_ec2_source.py  test_eks_cluster_pod_log_ingestion_lambda_function.py  test_eks_cluster_pod_log_pipeline_stfn_lambda_function.py  test_eks_constants.py  test_eks_daemonset_sidecar_config_lambda_function.py  test_flb.py  test_fluentbit_config_helper.py  test_ingestion_modification_lambda_function.py  test_k8s_source.py  test_kds_role_mgr.py  test_lambda_function.py  test_log_agent_helper.py  test_log_agent_helper_v2.py  test_member_account_lambda_function.py  test_pod_log_without_data_buffer_ingestion_lambda_function.py  test_s3_as_source_lambda_function.py  test_s3_source.py  test_service.py  test_syslog_as_source_lambda_function.py  test_syslog_source.py  test_utils.py
source/constructs/lambda/api/app_log_ingestion/util/: agent_role_mgr.py  agent_type.py  asg_deployment_configuration.py  assume_role.py  aws_svc_mgr.py  ec2_log_ingestion_svc.py  eks_deployment_configuration.py  kds_role_mgr.py  log_agent_helper.py  log_agent_helper_v2.py  log_ingestion_svc.py  sys_enum_type.py  utils.py
source/constructs/lambda/api/app_pipeline/: common.py  lambda_function.py  poetry.toml  pyproject.toml  upgrade_lambda_function.py
source/constructs/lambda/api/cross_account/: lambda_function.py  pyproject.toml
source/constructs/lambda/api/log_agent_status/: .coveragerc  aws_svc_mgr.py  lambda_function.py  pyproject.toml
source/constructs/lambda/api/log_source/: lambda_function.py  log_source_helper.py  pyproject.toml  requirements.txt
source/constructs/lambda/api/pipeline_ingestion_flow/: app_ingestion_flow.py  app_pipe_flow.py  osi_log_processor_helper.py  osi_processor_flow.py  pyproject.toml  svc_pipe_flow.py
source/constructs/lambda/common-lib/: README.md  pyproject.toml  setup.cfg
source/constructs/lambda/common-lib/commonlib/: __init__.py  account.py  aws.py  dao.py  decorator.py  exception.py  logging.py  model.py  opensearch.py  solution_metrics.py  utils.py
source/constructs/lambda/common-lib/test/: conftest.py  requirements-test.txt  test_account.py  test_aws.py  test_dao.py  test_decoractor.py  test_exception.py  test_opensearch.py  test_solution_metrics.py  test_utils.py
source/constructs/lambda/main/cfnHelper/: aws_svc_mgr.py  lambda_function.py  pyproject.toml
source/constructs/lambda/main/sfnHelper/: lambda_function.py  pyproject.toml
source/constructs/lambda/metrics/: cfnresponse.py  lambda_function.py  pyproject.toml
source/constructs/lambda/metrics/test/: test_lambda_function.py
source/constructs/lambda/microbatch/: .coveragerc  pyproject.toml
source/constructs/lambda/microbatch/batch_update_partition/: lambda_function.py
source/constructs/lambda/microbatch/connector/: lambda_function.py
source/constructs/lambda/microbatch/date_transform/: lambda_function.py
source/constructs/lambda/microbatch/etl_helper/: lambda_function.py
source/constructs/lambda/microbatch/metadata_writer/: lambda_function.py
source/constructs/lambda/microbatch/pipeline_resources_builder/: lambda_function.py
source/constructs/lambda/microbatch/s3_object_migration/: lambda_function.py
source/constructs/lambda/microbatch/s3_object_replication/: lambda_function.py
source/constructs/lambda/microbatch/s3_object_scanning/: lambda_function.py
source/constructs/lambda/microbatch/send_email/: lambda_function.py
source/constructs/lambda/microbatch/test/: mock.py  requirements-test.txt  test_aws.py  test_aws_glue.py  test_batch_update_partition.py  test_commonlib.py  test_connector.py  test_date_transform.py  test_enrichment.py  test_etl_helper.py  test_grafana.py  test_helpers.py  test_logschema.py  test_metadata_writer.py  test_models.py  test_pipeline_resources_builder.py  test_s3_object_migration.py  test_s3_object_replication.py  test_s3_object_scanning.py  test_send_email.py  test_utils.py
source/constructs/lambda/pipeline/log-processor/: lambda_function.py  pyproject.toml
source/constructs/lambda/plugin/standard/: Maxmind-COPYRIGHT&LICENSE.txt  README.md  geo_ip.py  pyproject.toml  requirements.txt  sampled.py  user_agent.py
source/constructs/lib/kinesis/lambda/: index.py  pyproject.toml
source/constructs/lib/layer/python/: pyproject.toml  requirements.txt
(+2022 files in other folders)
