[project]
name = "commonlib"
description = "Common Python library"
version = "0.1.0"
requires-python = ">=3.10,<4.0.0"
readme = "README.md"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
aws-lambda-powertools = "^3.4.1"
pydantic = "1.10.14"
pip = "^25.3"
requests = "^2.32.4"
requests-aws4auth = "^1.3.1"

[tool.poetry.group.dev.dependencies]
moto = "4.2.13"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
requests-mock = "^1.12.1"

[tool.poetry]
exclude = ["test*"]
