[metadata]
name = commonlib
version = 0.1.0

description = Example package description
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.9

install_requires =
    pydantic==1.10.6
    urllib3
    requests
    requests-aws4auth
    boto3
    botocore

[options.packages.find]
exclude =
    test*