[metadata]
name = commonlib
version = 0.1.0

description = Example package description
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.11

install_requires =
    pydantic==1.10.14
    pip==23.3
    aws-lambda-powertools
    requests
    requests-aws4auth

[options.packages.find]
exclude =
    test*