[project]
name = "microbatch-test"
description = ""
requires-python = ">=3.10,<4.0.0"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.36.1"
botocore = "^1.36.1"
s3transfer = "^0.11.1"
moto = "~4.2.13"
pyparsing = "^3.2.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-xdist = "^3.6.1"
pyyaml = "^6.0.2"
docker = "^7.1.0"
openapi-spec-validator = "^0.7.1"
numpy = "^2.2.1"
pyarrow = "^19.0.0"
pytest-httpserver = "^1.1.0"
binaryornot = "^0.4.4"
certifi = "^2024.12.14"
chardet = "^5.2.0"
charset-normalizer = "^3.4.1"
idna = "^3.10"
prettytable = "^3.12.0"
requests = "^2.32.4"
urllib3 = "^2.5.0"
wcwidth = "^0.2.13"
maxminddb = "^2.6.3"
user-agents = "^2.2.0"
cachetools = "^5.5.0"
commonlib = { path = "../common-lib" }