[project]
name = "alarm"
description = "Helper function to automated create and delete app pipeline alarm"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
moto = "^5.0.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
