[project]
name = "app-log-ingestion"
description = "app log ingestion lambda"
requires-python = ">=3.10"
dependencies = [
    "jinja2 (>=3.1.5,<4.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
boto3 = "^1.36.1"
moto = {version = "~4.2.13", extras = ["awslambda"]}
docker = "^7.1.0"
pytest = "^8.3.4"
pyyaml = "^6.0.2"
jinja2 = "^3.1.6"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
requests-mock = "^1.12.1"
requests-aws4auth = "^1.3.1"
urllib3 = "^2.3.0"
pydantic = "1.10.14"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
