[project]
name = "app-pipeline"
description = "AppPipeline APIs Resolver lambda"
requires-python = ">=3.10"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
boto3 = "^1.36.1"
moto = {version = "4.2.13", extras = ["awslambda"]}
pytest = "^8.3.4"
pyyaml = "^6.0.2"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
requests-mock = "^1.12.1"
requests-aws4auth = "^1.3.1"
pyparsing = "^3.2.1"
responses = "^0.25.6"
pydantic = "1.10.14"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
