[project]
name = "cross-account"
description = "CrossAccount APIs Resolver lambda"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
boto3 = "^1.36.1"
moto = "~4.2.13"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
