[project]
name = "log-agent-status"
description = "Instance Agent Status Query Resolver lambda"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
moto = "~4.2.13"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pyyaml = "^6.0.2"
docker = "^7.1.0"
boto3 = "^1.36.1"
pytest-mock = "^3.14.0"

