[project]
name = "log-source"
description = "LogSource APIs Resolver lambda"
requires-python = ">=3.10"
dependencies = [
    "pyopenssl (>=25.0.0,<26.0.0)",
    "certifi (>=2024.12.14,<2025.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
boto3 = "^1.36.1"
moto = "~4.2.13"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pyopenssl = "^25.0.0"
certifi = "^2024.12.14"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
