[project]
name = "cfnhelper"
description = "Helper function to handle CloudFormation deployment"
requires-python = ">=3.10,<4.0.0"
dependencies = [
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
moto = "~4.2.13"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pyyaml = "^6.0.2"
docker = "^7.1.0"
openapi-spec-validator = "^0.7.1"
jsonschema = "4.19.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
