[project]
name = "log-processor"
description = "Lambda function to process and load logs into OpenSearch"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
urllib3 = "^2.3.0"
requests = "^2.32.3"
requests-aws4auth = "^1.3.1"
boto3 = "^1.36.1"
botocore = "^1.36.1"
moto = "~5.1.3"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
requests-mock = "^1.12.1"
docker = "^7.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
