[project]
name = "standard"
description = ""
requires-python = ">=3.10"
dependencies = [
    "user-agents (>=2.2.0,<3.0.0)",
    "maxminddb (>=2.6.3,<3.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
user-agents = "^2.2.0"
maxminddb = "^2.6.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
