[project]
name = "python"
description = "Python layer"
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "pydantic (==1.10.14)",
    "aws-lambda-powertools (>=3.4.1,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "requests-aws4auth (>=1.3.1,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
